All texts completed.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portefolio Jarno Mornae</title>
+    <title>Portfolio Jarno Mornae</title>
 </head>
 <body>
     <header>
-        <h1>Portefolio Jarno Mornae</h1>
+        <h1>Portfolio Jarno Mornae</h1>
         <p>Hi! my name is Jarno Mornae. I am a student who studies informatics at Hoge school Gent. This is my portfolio of all the projects i have done. After the short list of projects, you can find my curriculum vitae. Enjoy!</p>
     </header>
       <section class="cards-wrapper">
@@ -16,9 +16,16 @@
           <a class="card" href="https://github.com/fwalravens/Proj2Aalst-G1" style="--bg-img: url(/images/ion-squad.png)">
             <div>
               <h1>Project: Ion squad</h1>
-              <p>This project</p>
+              <p>
+                  This project was completed by 4 developers including me. 
+                  It was given to us by the city Aalst. 
+                  The purpose of this project was to create a website that supports te gaming community of the city.
+              </p>
               <div class="tags">
-                <div class="tag">HTML</div>
+                <div class="tag">C#</div>
+                <div class="tag">.Net</div>
+                <div class="tag">Javascript</div>
+                <div class="tag">MVC</div>
               </div>
             </div>
           </a>
@@ -28,9 +35,9 @@
             <a class="card" href="/images/CV_JarnoMornae.pdf" download style="--bg-img: url(https://www.guido.be/Portals/0/Studentennieuws%2016/______cvbig.png)">
               <div>
                 <h1>Curriculum vitae</h1>
-                <p>This wil download my c.v. to your computer</p>
+                <p>This wil download my c.v. to your computer.</p>
                 <div class="tags">
-                  <div class="tag">HTML</div>
+                  <div class="tag">WORD</div>
                 </div>
               </div>
             </a>
