--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Curriculum vitae</h1>
                 <p>This wil download my c.v. to your computer.</p>
                 <div class="tags">
-                  <div class="tag">WORD</div>
+                  <div class="tag">PDF</div>
                 </div>
               </div>
             </a>
@@ -67,7 +67,17 @@ body {
 a {
   color: inherit;
 }
-
+header {
+    margin-left: 9%;
+    margin-right: 9%;
+    margin-top: 3%;
+    border-radius: 10px;
+    border: solid black;
+    padding: 2%;
+}
+header h1{
+    text-align: center;
+}
 .cards-wrapper {
   display: grid;
   justify-content: center;
